--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "auto_polar"
 version = "0.1.0"
+
+dependencies = [
+    "pandas",
+    "janome"
+]
+
+[tool.setuptools]
+py-modules = ["auto_polar"]
